fix: font family not working on mobile and new devices

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 } */
 
 @font-face {
-  font-family: 'Purna Title';
+  font-family: 'Chaviera';
   src: url('./assets/fonts/chaviera.otf') format('opentype');
 }
 
